--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "firebase": "^8.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
