--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "esnext",
     "jsx": "react-jsx",
     "target": "es5",
-    "allowJs": true,
+    "allowJs": false,
     "lib": [
       "dom",
       "dom.iterable",
