--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "prettier": "^2.3.2",
     "source-map-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5"
