--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "eslint": "^7.31.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
     "source-map-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
