switched fetch calls to axios for wider browser support

--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-// JSON mock server
-// REACT_APP_HOST = "http://localhost:5000/"
-
 // Heroku
-REACT_APP_HOST = "https://bowl-game-node-js-backend.herokuapp.com/api/"
+// REACT_APP_HOST = "https://bowl-game-node-js-backend.herokuapp.com"
 
 // Local Node JS Server
-// REACT_APP_HOST = "http://localhost:5000/api/"
+REACT_APP_HOST = "http://localhost:5000"
