added firebase. Starting to push users from UserNameBox.js

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@
 
 // Local Node JS Server
 REACT_APP_HOST = "http://localhost:5000"
+
+
+// Firebase API Key
+REACT_APP_HOST_FIREBASE_API_KEY = 'AIzaSyDF9HUik6Zy-O9Q4i7vh9NuRRuIcXi_mJw'
