--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.7",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
-    "firebase": "^8.8.1",
+    "firebase": "^8.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.11"
   },
   "scripts": {
     "start": "react-scripts start",
