--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,8 @@
     "module": "esnext",
     "jsx": "react-jsx",
     "target": "es5",
-    "allowJs": false,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "allowJs": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -23,7 +19,5 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
